tests/baselines/reference/getterMissingReturnError.errors.txt
tests/cases/compiler/getterMissingReturnError.ts(2,16): error TS2378: A 'get' accessor must return a value.


==== tests/cases/compiler/getterMissingReturnError.ts (1 errors) ====
    class test {
        public get p2(){
                   ~~
!!! error TS2378: A 'get' accessor must return a value.
    
        }
    }
    